LPD-97807 [BE] Cover the new project roles with tests